# mmodal_perception_fusion

./: CMakeLists.txt  README.md
docs/html/: featuresMatcher_8py_source.html  files.html  index.html  namespacefeatureScheduler.html  namespacefeaturesMatcher.html  namespacemembers.html  namespacemembers_vars.html  tableMatcher_8py_source.html
docs/html/search/: all_0.js  functions_1.js  namespaces_1.js  searchdata.js  variables_0.js  variables_1.js
docs/latex/: namespacefeatureScheduler.tex  namespacefeaturesMatcher.tex  namespacereasonerMain.tex
launch/: matcher.launch
msg/: TrackedShapes.msg  commonFeature.msg  correlationTable.msg  feature.msg  matcherObj.msg  matcher_out.msg  obj.msg  outputReasoner.msg
scripts/: Doxyfile  adapterPitt  correlation_functions.py  featuresMatcher.py  reasonerMain.py  tableMatcher  talkerMatcher  talkerTableMatcher.py  talkerTensor
sofar_multimodal/: README.md  package.xml
sofar_multimodal/docs/html/: correlation__functions_8py_source.html  featureScheduler_8py_source.html  namespacemembers_func.html  namespacereasonerMain.html  namespaces.html  reasonerMain_8py_source.html  talkerTableMatcher_8py_source.html  templateSubPub_8py_source.html
sofar_multimodal/docs/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  (+3 more)
sofar_multimodal/docs/latex/: namespaces.tex  refman.tex
sofar_multimodal/msg/: TensorOutput.msg  TrackedShape.msg  adapter.msg  corr.msg  record.msg  selectorMatcher.msg
sofar_multimodal/scripts/: adapterTensor  featureScheduler.py  featuresMatcher.py  tableMatcher.py  talkerPitt  templateSubPub.py
